[package]
authors = ["Erlangga Yudi Pradana"]
name = "grafana-exim"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.28"
log4rs = "1.4.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["full"] }
